@@ -54,7 +54,6 @@ public:
   virtual int GetXPosition() const { return m_buttonControl.GetXPosition();};
   virtual int GetYPosition() const { return m_buttonControl.GetYPosition();};
   virtual CStdString GetDescription() const;
-
 protected:
   virtual void Update() ;
   CGUIButtonControl m_buttonControl;
