@@ -227,7 +227,7 @@
   <string><id>294</id><value>Create bookmark</value></string>
   <string><id>295</id><value>Cycle bookmarks</value></string>
   <string><id>296</id><value>Clear bookmarks</value></string>
-  <string><id>297</id><value>AVDelay</value></string>
+  <string><id>297</id><value>Audio Delay</value></string>
   <string><id>298</id><value>Slider</value></string>
   <string><id>300</id><value>1. Language</value></string>
   <string><id>301</id><value>2. Volume</value></string>
@@ -876,6 +876,8 @@
   <string><id>13393</id><value>Calculate Size</value></string>
   <string><id>13394</id><value>Calculating folder size</value></string>
   <string><id>13395</id><value>Video Settings</value></string>
+  <string><id>13396</id><value>Audio and Subtitle Settings</value></string>
+  <string><id>13397</id><value>Enable Subtitles</value></string>
 
   <string><id>14000</id><value>Stack</value></string>
   <string><id>14001</id><value>Unstack</value></string>
