@@ -23,7 +23,7 @@ CGUIDialogSeekBar::CGUIDialogSeekBar(void)
 {
   m_fSeekPercentage = 0.0f;
   m_bRequireSeek = false;
-  m_loadOnDemand = true;    // the application class handles our resources
+  m_loadOnDemand = false;    // the application class handles our resources
 }
 
 CGUIDialogSeekBar::~CGUIDialogSeekBar(void)
