@@ -17,6 +17,8 @@
 #define CONTROL_START              50
 #define CONTROL_PAGE               60
 
+extern void xbox_audio_switch_channel(int iAudioStream, bool bAudioOnAllSpeakers); //lowlevel audio
+
 CGUIDialogVideoSettings::CGUIDialogVideoSettings(void)
     : CGUIDialog(WINDOW_DIALOG_VIDEO_OSD_SETTINGS, "VideoOSDSettings.xml")
 {
@@ -27,7 +29,7 @@ CGUIDialogVideoSettings::CGUIDialogVideoSettings(void)
   m_iCurrentPage = 0;
   m_iNumPages = 0;
   m_iNumPerPage = 0;
-//  LoadOnDemand(false);    // we are loaded by the osd window.
+  m_loadOnDemand = false;
 }
 
 CGUIDialogVideoSettings::~CGUIDialogVideoSettings(void)
@@ -56,6 +58,7 @@ bool CGUIDialogVideoSettings::OnMessage(CGUIMessage &message)
   case GUI_MSG_WINDOW_INIT:
     {
       CGUIDialog::OnMessage(message);
+      m_iScreen = message.GetParam2();
 
       CreateSettings();
 
@@ -94,7 +97,7 @@ void CGUIDialogVideoSettings::SetupPage()
   m_pOriginalSlider->SetVisible(false);
 
   // update our settings label
-  SET_CONTROL_LABEL(CONTROL_SETTINGS_LABEL, g_localizeStrings.Get(13395));
+  SET_CONTROL_LABEL(CONTROL_SETTINGS_LABEL, g_localizeStrings.Get(13395 + m_iScreen - WINDOW_DIALOG_VIDEO_OSD_SETTINGS));
 
   // our controls for layout...
   const CGUIControl *pControlArea = GetControl(CONTROL_AREA);
@@ -277,6 +280,7 @@ void CGUIDialogVideoSettings::AddSetting(VideoSetting &setting, int iPosX, int i
     ((CGUISettingsSliderControl *)pControl)->SetLabel(setting.name);
     if (setting.type == VideoSetting::SLIDER)
     {
+      ((CGUISettingsSliderControl *)pControl)->SetFormatString(setting.format);
       ((CGUISettingsSliderControl *)pControl)->SetFloatRange(setting.min, setting.max);
       ((CGUISettingsSliderControl *)pControl)->SetFloatInterval(setting.interval);
       if (setting.data) ((CGUISettingsSliderControl *)pControl)->SetFloatValue(*(float *)setting.data);
@@ -297,11 +301,6 @@ void CGUIDialogVideoSettings::AddSetting(VideoSetting &setting, int iPosX, int i
   pControl->SetVisible(true);
   Add(pControl);
   pControl->AllocResources();
-}
-
-void CGUIDialogVideoSettings::Render()
-{
-  CGUIDialog::Render();
 }
 
 void CGUIDialogVideoSettings::AddButton(unsigned int id, int label)
@@ -352,7 +351,7 @@ void CGUIDialogVideoSettings::AddSpin(unsigned int id, int label, int *current, 
   m_settings.push_back(setting);
 }
 
-void CGUIDialogVideoSettings::AddSlider(unsigned int id, int label, float *current, float min, float interval, float max)
+void CGUIDialogVideoSettings::AddSlider(unsigned int id, int label, float *current, float min, float interval, float max, const char *format /*= NULL*/)
 {
   VideoSetting setting;
   setting.id = id;
@@ -362,6 +361,7 @@ void CGUIDialogVideoSettings::AddSlider(unsigned int id, int label, float *curre
   setting.interval = interval;
   setting.max = max;
   setting.data = current;
+  if (format) setting.format = format;
   m_settings.push_back(setting);
 }
 
@@ -382,32 +382,126 @@ void CGUIDialogVideoSettings::CreateSettings()
   // clear out any old settings
   m_settings.clear();
   // create our settings
-  AddBool(1, 306, &g_stSettings.m_currentVideoSettings.m_NonInterleaved);
-  AddBool(2, 343, &g_stSettings.m_currentVideoSettings.m_AdjustFrameRate);
-  AddBool(3, 431, &g_stSettings.m_currentVideoSettings.m_NoCache);
-  AddBool(4, 644, &g_stSettings.m_currentVideoSettings.m_Crop);
-  if (g_guiSettings.m_LookAndFeelResolution <= HDTV_480p_16x9)
-    AddBool(5, 285, &g_stSettings.m_currentVideoSettings.m_Deinterlace);
+  if (m_iScreen == WINDOW_DIALOG_VIDEO_OSD_SETTINGS)
+  { // Video settings
+    AddBool(1, 306, &g_stSettings.m_currentVideoSettings.m_NonInterleaved);
+    AddBool(2, 343, &g_stSettings.m_currentVideoSettings.m_AdjustFrameRate);
+    AddBool(3, 431, &g_stSettings.m_currentVideoSettings.m_NoCache);
+    AddBool(4, 644, &g_stSettings.m_currentVideoSettings.m_Crop);
+    if (g_guiSettings.m_LookAndFeelResolution <= HDTV_480p_16x9)
+      AddBool(5, 285, &g_stSettings.m_currentVideoSettings.m_Deinterlace);
+    else
+    {
+      const int entries[] = {351, 16008, 16007}; 
+      AddSpin(6, 16006, &g_stSettings.m_currentVideoSettings.m_FieldSync, 3, entries);
+    }
+    {
+      const int entries[] = {630, 631, 632, 633, 634, 635, 636 };
+      AddSpin(7, 629, &g_stSettings.m_currentVideoSettings.m_ViewMode, 7, entries);
+    }
+    AddSlider(8, 216, &g_stSettings.m_currentVideoSettings.m_CustomZoomAmount, 0.5f, 0.01f, 2.0f);
+    AddSlider(9, 217, &g_stSettings.m_currentVideoSettings.m_CustomPixelRatio, 0.5f, 0.01f, 2.0f);
+    AddSlider(10, 464, &g_stSettings.m_currentVideoSettings.m_Brightness, 0, 100);
+    AddSlider(11, 465, &g_stSettings.m_currentVideoSettings.m_Contrast, 0, 100);
+    AddSlider(12, 466, &g_stSettings.m_currentVideoSettings.m_Gamma, 0, 100);
+    m_flickerFilter = g_guiSettings.GetInt("Filters.Flicker");
+    AddSpin(13, 13100, &m_flickerFilter, 0, 5);
+    m_soften = g_guiSettings.GetBool("Filters.Soften");
+    AddBool(14, 215, &m_soften);
+    AddButton(15, 214);
+  }
   else
-  {
-    const int entries[] = {351, 16008, 16007}; 
-    AddSpin(6, 16006, &g_stSettings.m_currentVideoSettings.m_FieldSync, 3, entries);
+  { // Audio and Subtitle settings
+    m_volume = g_stSettings.m_nVolumeLevel * 0.01f;
+    AddSlider(1, 13376, &m_volume, VOLUME_MINIMUM * 0.01f, (VOLUME_MAXIMUM - VOLUME_MINIMUM) * 0.0001f, VOLUME_MAXIMUM * 0.01f, "%2.1f dB");
+    AddSlider(2, 297, &g_stSettings.m_currentVideoSettings.m_AudioDelay, -g_stSettings.m_fAudioDelayRange, 0.1f, g_stSettings.m_fAudioDelayRange, "%2.1fs");
+    AddAudioStreams(3);
+    AddBool(4, 13397, &g_stSettings.m_currentVideoSettings.m_SubtitleOn);
+    AddSlider(5, 303, &g_stSettings.m_currentVideoSettings.m_SubtitleDelay, -g_stSettings.m_fSubsDelayRange, 0.1f, g_stSettings.m_fSubsDelayRange, "%2.1fs");
+    AddSubtitleStreams(6);
   }
-  {
-    const int entries[] = {630, 631, 632, 633, 634, 635, 636 };
-    AddSpin(7, 629, &g_stSettings.m_currentVideoSettings.m_ViewMode, 7, entries);
-  }
-  AddSlider(8, 216, &g_stSettings.m_currentVideoSettings.m_CustomZoomAmount, 0.5f, 0.01f, 2.0f);
-  AddSlider(9, 217, &g_stSettings.m_currentVideoSettings.m_CustomPixelRatio, 0.5f, 0.01f, 2.0f);
-  AddSlider(10, 464, &g_stSettings.m_currentVideoSettings.m_Brightness, 0, 100);
-  AddSlider(11, 465, &g_stSettings.m_currentVideoSettings.m_Contrast, 0, 100);
-  AddSlider(12, 466, &g_stSettings.m_currentVideoSettings.m_Gamma, 0, 100);
-  m_flickerFilter = g_guiSettings.GetInt("Filters.Flicker");
-  AddSpin(13, 13100, &m_flickerFilter, 0, 5);
-  m_soften = g_guiSettings.GetBool("Filters.Soften");
-  AddBool(14, 215, &m_soften);
-  AddButton(15, 214);
 }
+
+void CGUIDialogVideoSettings::AddAudioStreams(int id)
+{
+  VideoSetting setting;
+  setting.id = id;
+  setting.name = g_localizeStrings.Get(460);
+  setting.type = VideoSetting::SPIN;
+  setting.min = 0;
+  setting.data = &m_audioStream;
+
+  // get the number of audio strams for the current movie
+  setting.max = (float)g_application.m_pPlayer->GetAudioStreamCount() - 1;
+  m_audioStream = g_application.m_pPlayer->GetAudioStream();
+
+  // check if we have a single, stereo stream, and if so, allow us to split into
+  // left, right or both
+  if (!setting.max)
+  {
+    CStdString strAudioInfo;
+    g_application.m_pPlayer->GetAudioInfo(strAudioInfo);
+    int iNumChannels = atoi(strAudioInfo.Right(strAudioInfo.size() - strAudioInfo.Find("chns:") - 5).c_str());
+    CStdString strAudioCodec = strAudioInfo.Mid(7, strAudioInfo.Find(") VBR") - 5);
+    bool bDTS = strstr(strAudioCodec.c_str(), "DTS") != 0;
+    bool bAC3 = strstr(strAudioCodec.c_str(), "AC3") != 0;
+    if (iNumChannels == 2 && !(bDTS || bAC3))
+    { // ok, enable these options
+/*      if (g_stSettings.m_currentVideoSettings.m_AudioStream == -1)
+      { // default to stereo stream
+        g_stSettings.m_currentVideoSettings.m_AudioStream = 0;
+      }*/
+      setting.max = 2;
+      for (int i = 0; i <= setting.max; i++)
+        setting.entry.push_back(g_localizeStrings.Get(13320 + i));
+      m_audioStream = -g_stSettings.m_currentVideoSettings.m_AudioStream - 1;
+      m_settings.push_back(setting);
+      return;
+    }
+  }
+
+  // cycle through each audio stream and add it to our list control
+  for (int i = 0; i <= setting.max; ++i)
+  {
+    CStdString strItem;
+    g_application.m_pPlayer->GetAudioStreamName(i, strItem);
+    if (strItem.length() == 0)
+      strItem.Format("%2i", i + 1);
+    setting.entry.push_back(strItem);
+  }
+  m_settings.push_back(setting);
+}
+
+void CGUIDialogVideoSettings::AddSubtitleStreams(int id)
+{
+  VideoSetting setting;
+  setting.id = id;
+  setting.name = g_localizeStrings.Get(462);
+  setting.type = VideoSetting::SPIN;
+  setting.min = 0;
+  setting.data = &g_stSettings.m_currentVideoSettings.m_SubtitleStream;
+
+  // get the number of audio strams for the current movie
+  setting.max = (float)g_application.m_pPlayer->GetSubtitleCount() - 1;
+
+  // cycle through each subtitle and add it to our entry list
+  for (int i = 0; i <= setting.max; ++i)
+  {
+    CStdString strItem;
+    g_application.m_pPlayer->GetSubtitleName(i, strItem);
+    if (strItem.length() == 0)
+      strItem.Format("%2i", i + 1);
+    setting.entry.push_back(strItem);
+  }
+
+  if (setting.max < 0)
+  { // no subtitle streams - just add a "None" entry
+    setting.max = 0;
+    setting.entry.push_back(g_localizeStrings.Get(231).c_str());
+  }
+  m_settings.push_back(setting);
+}
+
 
 void CGUIDialogVideoSettings::OnSettingChanged(unsigned int num)
 {
@@ -415,40 +509,108 @@ void CGUIDialogVideoSettings::OnSettingChanged(unsigned int num)
   if (num >= m_settings.size()) return;
   VideoSetting &setting = m_settings.at(num);
   // check and update anything that needs it
-  if ((setting.id >= 1 && setting.id <= 3) || setting.id == 5)
-    g_application.Restart(true);
-  else if (setting.id == 4)
-    g_renderManager.AutoCrop(g_stSettings.m_currentVideoSettings.m_Crop);
-  else if (setting.id == 7)
+  if (m_iScreen == WINDOW_DIALOG_VIDEO_OSD_SETTINGS)
   {
-    g_renderManager.SetViewMode(g_stSettings.m_currentVideoSettings.m_ViewMode);
-    g_stSettings.m_currentVideoSettings.m_CustomZoomAmount = g_stSettings.m_fZoomAmount;
-    g_stSettings.m_currentVideoSettings.m_CustomPixelRatio = g_stSettings.m_fPixelRatio;
-    UpdateSetting(8);
-    UpdateSetting(9);
+    if ((setting.id >= 1 && setting.id <= 3) || setting.id == 5)
+      g_application.Restart(true);
+    else if (setting.id == 4)
+      g_renderManager.AutoCrop(g_stSettings.m_currentVideoSettings.m_Crop);
+    else if (setting.id == 7)
+    {
+      g_renderManager.SetViewMode(g_stSettings.m_currentVideoSettings.m_ViewMode);
+      g_stSettings.m_currentVideoSettings.m_CustomZoomAmount = g_stSettings.m_fZoomAmount;
+      g_stSettings.m_currentVideoSettings.m_CustomPixelRatio = g_stSettings.m_fPixelRatio;
+      UpdateSetting(8);
+      UpdateSetting(9);
+    }
+    else if (setting.id == 8 || setting.id == 9)
+    {
+      g_stSettings.m_currentVideoSettings.m_ViewMode = VIEW_MODE_CUSTOM;
+      g_renderManager.SetViewMode(VIEW_MODE_CUSTOM);
+      UpdateSetting(7);
+    }
+    else if (setting.id >= 10 && setting.id <= 12)
+      CUtil::SetBrightnessContrastGammaPercent(g_stSettings.m_currentVideoSettings.m_Brightness, g_stSettings.m_currentVideoSettings.m_Contrast, g_stSettings.m_currentVideoSettings.m_Gamma, true);
+    else if (setting.id >= 13 && setting.id <= 14)
+    {
+      RESOLUTION res = g_graphicsContext.GetVideoResolution();
+      g_guiSettings.SetInt("Filters.Flicker", m_flickerFilter);
+      g_guiSettings.SetBool("Filters.Soften", m_soften);
+      g_graphicsContext.SetVideoResolution(res);
+    }
+    else if (setting.id == 15)
+    {
+      // close the OSD
+      CGUIDialog *pDialog = (CGUIDialog *)m_gWindowManager.GetWindow(WINDOW_OSD);
+      if (pDialog) pDialog->Close();
+      // launch calibration window
+      m_gWindowManager.ActivateWindow(WINDOW_MOVIE_CALIBRATION);
+    }
   }
-  else if (setting.id == 8 || setting.id == 9)
-  {
-    g_stSettings.m_currentVideoSettings.m_ViewMode = VIEW_MODE_CUSTOM;
-    g_renderManager.SetViewMode(VIEW_MODE_CUSTOM);
-    UpdateSetting(7);
+  else
+  { // audio settings
+    if (setting.id == 1)
+      g_stSettings.m_nVolumeLevel = (long)(m_volume * 100.0f);
+    else if (setting.id == 2)
+    {
+      if (g_application.m_pPlayer)
+        g_application.m_pPlayer->SetAVDelay(g_stSettings.m_currentVideoSettings.m_AudioDelay);
+    }
+    else if (setting.id == 3)
+    {
+      // first check if it's a stereo track that we can change between stereo, left and right
+      if (g_application.m_pPlayer->GetAudioStreamCount() == 1)
+      {
+        if (setting.max == 2)
+        { // we're in the case we want - call the code to switch channels etc.
+          // update the screen setting...
+          g_stSettings.m_currentVideoSettings.m_AudioStream = -1 - m_audioStream;
+          // call monkeyh1's code here...
+          bool bAudioOnAllSpeakers = (g_guiSettings.GetInt("AudioOutput.Mode") == AUDIO_DIGITAL) && g_guiSettings.GetBool("VideoPlayer.OutputToAllSpeakers");
+          xbox_audio_switch_channel(m_audioStream, bAudioOnAllSpeakers);
+          return;
+        }
+      }
+      // only change the audio stream if a different one has been asked for
+      if (g_application.m_pPlayer->GetAudioStream() != m_audioStream)
+      {
+        g_stSettings.m_currentVideoSettings.m_AudioStream = m_audioStream;
+        g_application.m_pPlayer->SetAudioStream(m_audioStream);    // Set the audio stream to the one selected
+        if (g_application.GetCurrentPlayer() == "mplayer")
+          g_application.Restart(true);  // restart to make new audio track active
+      }
+    }
+    else if (setting.id == 4)
+      g_application.m_pPlayer->SetSubtitleVisible(g_stSettings.m_currentVideoSettings.m_SubtitleOn);
+    else if (setting.id == 5)
+      g_application.m_pPlayer->SetSubTitleDelay(g_stSettings.m_currentVideoSettings.m_SubtitleDelay);
+    else if (setting.id == 6)
+    {
+      if (setting.max == 0)
+        return;   // nothing to do
+      g_application.m_pPlayer->SetSubtitle(g_stSettings.m_currentVideoSettings.m_SubtitleStream);
+    }
   }
-  else if (setting.id >= 10 && setting.id <= 12)
-    CUtil::SetBrightnessContrastGammaPercent(g_stSettings.m_currentVideoSettings.m_Brightness, g_stSettings.m_currentVideoSettings.m_Contrast, g_stSettings.m_currentVideoSettings.m_Gamma, true);
-  else if (setting.id >= 13 && setting.id <= 14)
-  {
-    RESOLUTION res = g_graphicsContext.GetVideoResolution();
-    g_guiSettings.SetInt("Filters.Flicker", m_flickerFilter);
-    g_guiSettings.SetBool("Filters.Soften", m_soften);
-    g_graphicsContext.SetVideoResolution(res);
-  }
-  else if (setting.id == 15)
-  {
-    // close the OSD
-    CGUIDialog *pDialog = (CGUIDialog *)m_gWindowManager.GetWindow(WINDOW_OSD);
-    if (pDialog) pDialog->Close();
-    // launch calibration window
-    m_gWindowManager.ActivateWindow(WINDOW_MOVIE_CALIBRATION);
+}
 
+bool CGUIDialogVideoSettings::HasID(DWORD dwID)
+{
+  return (dwID >= WINDOW_DIALOG_VIDEO_OSD_SETTINGS && dwID <= WINDOW_DIALOG_VIDEO_OSD_SETTINGS + 1);
+}
+
+void CGUIDialogVideoSettings::Render()
+{
+  if (m_iScreen == WINDOW_DIALOG_VIDEO_OSD_SETTINGS + 1)
+  {
+    m_volume = g_stSettings.m_nVolumeLevel * 0.01f;
+    UpdateSetting(1);
+    if (g_application.m_pPlayer)
+    {
+      // these settings can change on the fly
+      UpdateSetting(2);
+      UpdateSetting(4);
+      UpdateSetting(5);
+    }
   }
+  CGUIDialog::Render();
 }
