@@ -115,9 +115,9 @@ bool CGUIWindowVisualisation::OnMessage(CGUIMessage& message)
     {
       // check and close any OSD windows
       CGUIDialogMusicOSD *pOSD = (CGUIDialogMusicOSD *)m_gWindowManager.GetWindow(WINDOW_DIALOG_MUSIC_OSD);
-      if (pOSD && pOSD->IsRunning()) pOSD->Close();
+      if (pOSD && pOSD->IsRunning()) pOSD->Close(true);
       CGUIDialogVisualisationPresetList *pList = (CGUIDialogVisualisationPresetList *)m_gWindowManager.GetWindow(WINDOW_DIALOG_VIS_PRESET_LIST);
-      if (pList && pList->IsRunning()) pList->Close();
+      if (pList && pList->IsRunning()) pList->Close(true);
     }
     break;
   case GUI_MSG_WINDOW_INIT:
