@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 02-08-2005 added: Initial support for audio and subtitle settings to new video OSD layout (currently disabled)
+ - 02-08-2005 fixed: DialogSeekBar was unloaded when it was closed, rather than on app close.
  - 02-08-2005 fixed: SITE HELP command wasn't spec-correct.  Thanks to ljardine.
  - 02-08-2005 updated: kai-vectors.xml (Thx to Puma81)
  - 01-08-2005 fixed: dvdplayer crashed at the end of certain files
